# gmail-template-manager

./: .gitignore  README.md
app/: package.json
app/src/: App.css  App.js  actions.js  index.js  reducers.js  theme.js  utils.js
app/src/components/: AddTemplate.js  Button.js  Template.js  TemplateForm.js  TemplateList.js
chrome-extension/: content.js  iframe.html  iframe.js  manifest.json
rocket-backend/: Cargo.toml  bootstrap.sh
rocket-backend/migrations/2018-10-26-213301_create_templates/: down.sql  up.sql
rocket-backend/src/: main.rs  models.rs
