[package]
name = "rocket-backend"
version = "0.1.0"
authors = ["brunop <bruno@seelk.co>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_cors = "0.3.0"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
diesel = { version = "1.3", features = ["sqlite", "r2d2"]    }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.10"

[dev-dependencies]
parking_lot = {version = "0.6", features = ["nightly"]}
rand = "0.5"
